# Tailwater

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
Tutorials/: Basics.ipynb  Charge_Density.ipynb  Compute_Z2.ipynb  Kwant_Scattering_Example.ipynb  MultiMaterial_Finetune.ipynb  Port_To_PyBinding_PythTB.ipynb  Surface_States.ipynb  Tailwater_to_WannierBerri_AHC_SHC_OptC_More.ipynb
docs/: conf.py  examples.rst  exporting_models.rst  fermi_alignment.rst  fermi_arcs.rst  index.rst  installation.rst  performance.rst  quickstart.rst  requirements.txt
docs/api/: client.rst  constants.rst  finetune_heads.rst  heads_only.rst  hr_export.rst  subspace_utils.rst  surface_charge.rst  wannier_wizard.rst
examples/: 01_basic_api_call.py  02_subspace_projection.py  03_surface_analysis.py  04_band_structure.py  05_kwant_scattering.py  06_wannierberri_conductivity.py  07_spin_hall_conductivity.py  08_quantum_geometry.py  09_optical_conductivity.py  10_multi_material_finetune.py  11_surface_charge_density.py
src/tailwater/: __init__.py  client.py  constants.py  convert.py  finetune_heads.py  heads_only_model.py  hr_export.py  make_heads_only.py  multi_finetune.py  sparse.py  subspace_utils.py  surface_charge.py  wannier_wizard.py  wb_helpers.py
src/tailwater.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_imports.py
